# gloop-git-switcher

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build_and_release.yml
assets/: gittrayapp_icon.icns
docs/: guia-estrategica.md
src/: avatar.py  git_profiles.py  git_user.py  main.py  ui_tray.py
tests/: test_avatar.py  test_git_profiles.py  test_git_user.py
